--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Lab2G</string>
+    <string name="bienvenida">¡Bienvenido!</string>
+    <string name="agregar_to_do_list">AGREGAR TO DO LIST</string>
 </resources>
