--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="bienvenida">¡Bienvenido!</string>
     <string name="agregar_to_do_list">AGREGAR TO DO LIST</string>
     <string name="buttonRegresar">REGISTRAR SESION NUEVAMENTE</string>
+    <string name="vacio"> </string>
+
 </resources>
