--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Lab2G</string>
+    <string name="app_name">Lab2G6</string>
     <string name="agregar_actividad">Agregar Actividad</string>
     <string name="agregar_nueva_actividad">Agregar nueva actividad</string>
     <string name="bienvenida">¡Bienvenido!</string>
